[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tonic = "0.12.2"
prost = "0.13.2"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.12.2"
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["default"] }
anyhow = "1.0.89"
scylla = "0.14.0"
charybdis = "0.7.7"

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
dashmap = "6.1.0"
dotenv = "0.15.0"
